# SUPREME-V4

./: Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py  security.py
app/db/: memory_store.py
app/services/: ingestion.py  metrics.py  schemas.py
scripts/: supreme_watcher.py
