[project]
name = "supreme-v4"
version = "0.1.0"
description = "SUPREME V4 backend telemetry and exposure analytics system"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
